syntax = "proto3";

option csharp_namespace = "UserService";

package user;

service User {
  rpc GetUser (GetUserRequest) returns (UserReply);
}

message GetUserRequest {
  int32 id = 1;
}

message UserReply {
  string username = 1;
}
